--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Barmajia</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="" />
+      </div>
+    </header>
+  </body>
 </html>
