--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">
+      <div class="logo">gool</div>
         <img src="" />
       </div>
     </header>
