--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/1.png" />
+        <img src="https://github.com/barmajia/barmajia.github.io/blob/main/1.png" />
       </div>
       <div class="nav">
         <ul>
