--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="logo">
         <img
-          src="https://github.com/barmajia/barmajia.github.io/blob/main/1.png"
+          src="https://drive.google.com/file/d/1KDL35Fs7vGT6C5liMoGOGUHo53_rR2Ao/view?usp=sharing"
         />
       </div>
       <div class="nav">
