--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <img
-          src="https://drive.google.com/file/d/1KDL35Fs7vGT6C5liMoGOGUHo53_rR2Ao/view?usp=sharing"
-        />
+        <img src="images/1.png" />
       </div>
       <div class="nav">
         <ul>
