adding href for pages

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       </div>
       <div class="nav">
         <ul>
-          <li>Home</li>
-          <li>Repository</li>
-          <li>Courses</li>
-          <li>Contact us</li>
+          <a href="#">Home</a>
+          <a href="pages/repository.html">Repository</a>
+          <a href="pages/courses.html">Courses</a>
+          <a href="pages/contact.html">Contact us</a>
         </ul>
       </div>
     </header>
