--- a/pages/repository.html
+++ b/pages/repository.html
@@ -14,8 +14,8 @@
       </div>
       <div class="nav">
         <ul>
-          <a href="">Home</a>
-          <a href="#">Repository</a>
+          <a href="../index.html">Home</a>
+          <a>Repository</a>
           <a href="pages/courses.html">Courses</a>
           <a href="pages/contact.html">Contact us</a>
         </ul>
