--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,10 +14,10 @@
       </div>
       <div class="nav">
         <ul>
-          <a href="#">Home</a>
+          <a href="../index.html">Home</a>
           <a href="pages/repository.html">Repository</a>
           <a href="pages/courses.html">Courses</a>
-          <a href="pages/contact.html">Contact us</a>
+          <a>Contact us</a>
         </ul>
       </div>
     </header>
