--- a/pages/courses.html
+++ b/pages/courses.html
@@ -14,9 +14,9 @@
       </div>
       <div class="nav">
         <ul>
-          <a href="#">Home</a>
+          <a href="../index.html">Home</a>
           <a href="pages/repository.html">Repository</a>
-          <a href="pages/courses.html">Courses</a>
+          <a>Courses</a>
           <a href="pages/contact.html">Contact us</a>
         </ul>
       </div>
