--- a/pages/repository.html
+++ b/pages/repository.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barmajia</title>
-    <link rel="stylesheet" href="style/style.css" />
-    <script src="scripts/script.js"></script>
+    <link rel="stylesheet" href="../style/style.css" />
+    <script src="../scripts/script.js"></script>
   </head>
   <body>
     <header>
@@ -14,7 +14,7 @@
       </div>
       <div class="nav">
         <ul>
-          <a href="../index.html">Home</a>
+          <a href="./index.html">Home</a>
           <a>Repository</a>
           <a href="pages/courses.html">Courses</a>
           <a href="pages/contact.html">Contact us</a>
