--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,9 +14,9 @@
       </div>
       <div class="nav">
         <ul>
-          <a href="./index.html">Home</a>
-          <a href="pages/repository.html">Repository</a>
-          <a href="pages/courses.html">Courses</a>
+          <a href="../index.html">Home</a>
+          <a href="repository.html">Repository</a>
+          <a href="courses.html">Courses</a>
           <a>Contact us</a>
         </ul>
       </div>
