--- a/pages/courses.html
+++ b/pages/courses.html
@@ -14,10 +14,10 @@
       </div>
       <div class="nav">
         <ul>
-          <a href="./index.html">Home</a>
-          <a href="pages/repository.html">Repository</a>
+          <a href="../index.html">Home</a>
+          <a href="repository.html">Repository</a>
           <a>Courses</a>
-          <a href="pages/contact.html">Contact us</a>
+          <a href="contact.html">Contact us</a>
         </ul>
       </div>
     </header>
