--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,13 +10,13 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/1.png" />
+        <img src="../images/1.png" />
       </div>
       <div class="nav">
         <ul>
           <a href="../index.html">Home</a>
-          <a href="repository.html">Repository</a>
-          <a href="courses.html">Courses</a>
+          <a href="../pages/repository.html">Repository</a>
+          <a href="../pages/courses.html">Courses</a>
           <a>Contact us</a>
         </ul>
       </div>
