--- a/pages/courses.html
+++ b/pages/courses.html
@@ -10,14 +10,14 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/1.png" />
+        <img src="../images/1.png" />
       </div>
       <div class="nav">
         <ul>
           <a href="../index.html">Home</a>
-          <a href="repository.html">Repository</a>
+          <a href="../pages/repository.html">Repository</a>
           <a>Courses</a>
-          <a href="contact.html">Contact us</a>
+          <a href="../pages/contact.html">Contact us</a>
         </ul>
       </div>
     </header>
