--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,5 +21,8 @@
         </ul>
       </div>
     </header>
+    <section>
+      <div class="about">البرمجة هوية</div>
+    </section>
   </body>
 </html>
