this is what we needs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <div class="nav">
         <ul>
-          <a href="#">Home</a>
+          <a>Home</a>
           <a href="pages/repository.html">Repository</a>
           <a href="pages/courses.html">Courses</a>
           <a href="pages/contact.html">Contact us</a>
